--- a/example/index.html
+++ b/example/index.html
@@ -34,7 +34,7 @@
       </div>
     </form>
 
-    <script src="../jsoon.js"></script>
+    <script src="../dist/jsoon.js"></script>
     <script src="example.js"></script>
   </body>
 </html>
